--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <groupId>dev.alexisok</groupId>
     <artifactId>untitled-bot</artifactId>
     <version>0.0.1</version>
+    <packaging>jar</packaging>
     <build>
         <plugins>
             <plugin>
@@ -15,6 +16,20 @@
                 <configuration>
                     <source>11</source>
                     <target>11</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>dev.alexisok.untitledbot.Main</mainClass>
+                        </manifest>
+                    </archive>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                    <finalName>untitledbot</finalName>
                 </configuration>
             </plugin>
         </plugins>
