--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,6 +12,7 @@ jobs:
         uses: AlexIsOK/build-number@v3 # using my own fork to work better for what I need
         with:
           token: ${{secrets.github_token}}
+          version: v0.0.1 # this way only the repository owner can upgrade to a new version
       - name: Print new build number
         run: echo "Build number is $BUILD_NUMBER"
         # Or, if you're on Windows: echo "Build number is ${env:BUILD_NUMBER}"
