--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,6 +13,30 @@ jobs:
         with:
           token: ${{secrets.github_token}}
           version: v0.0.1 # this way only the repository owner can upgrade to a new version
-      - name: Print new build number
-        run: echo "Build number is $BUILD_NUMBER"
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Build Project
+        run: |
+          mvn clean compile assembly:single
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ steps.buildnumber.outputs.build_number }}
+          release_name: Release ${{ steps.buildnumber.outputs.build_number }}
+          draft: false
+          prerelease: true # official releases will be done by humans.
+      - name: Upload Release Asset
+        id: upload-release-asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
+          asset_path: ./target/untitledbot-jar-with-dependencies.jar
+          asset_name: untitled-bot.jar
+          asset_content_type: application/jar-archive
         # Or, if you're on Windows: echo "Build number is ${env:BUILD_NUMBER}"
+        
