--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,14 @@
                     <finalName>untitledbot</finalName>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.2.0</version>
+                <configuration>
+                    <finalName>untitledbot-jdoc</finalName>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
@@ -53,6 +61,12 @@
             <artifactId>junit-jupiter</artifactId>
             <version>RELEASE</version>
             <scope>test</scope>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-javadoc-plugin -->
+        <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-javadoc-plugin</artifactId>
+            <version>3.2.0</version>
         </dependency>
     </dependencies>
     
