--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,11 @@
             <artifactId>maven-javadoc-plugin</artifactId>
             <version>3.2.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.xeustechnologies</groupId>
+            <artifactId>jcl-core</artifactId>
+            <version>2.8</version>
+        </dependency>
     </dependencies>
     
     <repositories>
