--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,13 @@
     <version>0.0.1</version>
     <packaging>jar</packaging>
     <build>
+        <extensions>
+            <extension>
+                <groupId>org.apache.maven.wagon</groupId>
+                <artifactId>wagon-ssh</artifactId>
+                <version>2.10</version>
+            </extension>
+        </extensions>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -42,13 +49,13 @@
             </plugin>
         </plugins>
     </build>
+    
 
     <dependencies>
         <dependency>
             <groupId>net.dv8tion</groupId>
             <artifactId>JDA</artifactId>
-            <version>4.0.0_39</version>
-                 <!--Version 4.0.0_39 because I don't know the newer versions.-->
+            <version>4.2.0_172</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -82,4 +89,12 @@
             <url>https://jcenter.bintray.com</url>
         </repository>
     </repositories>
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub OWNER Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/AlexIsOK/untitled-bot</url>
+        </repository>
+    </distributionManagement>
+
 </project>
