--- a/pom.xml
+++ b/pom.xml
@@ -92,7 +92,7 @@
     <distributionManagement>
         <repository>
             <id>github</id>
-            <name>GitHub OWNER Apache Maven Packages</name>
+            <name>GitHub Packages</name>
             <url>https://maven.pkg.github.com/AlexIsOK/untitled-bot</url>
         </repository>
     </distributionManagement>
