--- a/src/main/resources/bot.properties
+++ b/src/main/resources/bot.properties
@@ -1,5 +1,5 @@
 
 #data path for user data
 dataPath=./usrdata/
-#prefix for the bot, default is %
-prefix=,
+#prefix for the bot, default is >
+prefix=>
