--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,11 @@
             <artifactId>jcl-core</artifactId>
             <version>2.8</version>
         </dependency>
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.32.3</version>
+        </dependency>
     </dependencies>
     
     <repositories>
