--- a/bot.properties
+++ b/bot.properties
@@ -1,6 +1,6 @@
 #data path for user data
 dataPath=./usrdata/
-#prefix for the bot, default is %
+#prefix for the bot, default is >
 prefix=>
 #owner ID
 ownerId=541763812676861952
