--- a/.github/workflows/gitpackage.yml
+++ b/.github/workflows/gitpackage.yml
@@ -2,7 +2,7 @@ name: Publish package to GitHub Packages
 
 on:
   push:
-    branches: [ master, beta ]
+    branches: [ master ]
 jobs:
   publish:
     runs-on: ubuntu-latest
@@ -10,7 +10,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
         with:
-          java-version: 11
+          java-version: 1.8
       - name: Publish package
         run: mvn -B deploy
         env:
