--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>dev.alexisok</groupId>
     <artifactId>untitled-bot</artifactId>
-    <version>1.3</version>
+    <version>1.3.1</version>
     <packaging>jar</packaging>
     
     <build>
@@ -114,9 +114,9 @@
     </repositories>
     <distributionManagement>
         <repository>
-            <id>github</id>
-            <name>GitHub Packages</name>
-            <url>https://maven.pkg.github.com/AlexIsOK/untitled-bot</url>
+            <id>bintray-alexisok-untitled-bot</id>
+            <name>alexisok-untitled-bot</name>
+            <url>https://api.bintray.com/maven/alexisok/untitled-bot/untitled-bot/;publish=1</url>
         </repository>
     </distributionManagement>
 
