lots of green and red in this diff, christmas time already?

--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,12 @@
             <artifactId>JDA</artifactId>
             <version>4.2.0_197</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.quartz-scheduler/quartz -->
+        <dependency>
+            <groupId>org.quartz-scheduler</groupId>
+            <artifactId>quartz</artifactId>
+            <version>2.3.2</version>
+        </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
