--- a/pom.xml
+++ b/pom.xml
@@ -134,6 +134,12 @@
             <artifactId>DBL-Java-Library</artifactId>
             <version>2.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.8</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
     
     <repositories>
