--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,11 @@
             <version>1.18.8</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.sedmelluq</groupId>
+            <artifactId>lavaplayer</artifactId>
+            <version>1.3.34</version>
+        </dependency>
     </dependencies>
     
     <repositories>
