more cache stuff

--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,11 @@
             <version>3.2.0</version>
         </dependency>
         <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-text</artifactId>
+            <version>1.9</version>
+        </dependency>
+        <dependency>
             <groupId> org.apache.cassandra</groupId>
             <artifactId>cassandra-all</artifactId>
             <version>3.11.8</version>
