--- a/pom.xml
+++ b/pom.xml
@@ -211,6 +211,11 @@
             <version>${kotlin.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.sedmelluq</groupId>
+            <artifactId>jda-nas</artifactId>
+            <version>1.1.0</version>
+        </dependency>
     </dependencies>
     
     <repositories>
