--- a/pom.xml
+++ b/pom.xml
@@ -149,9 +149,9 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.github.FredBoat</groupId>
-            <artifactId>Lavalink-Client</artifactId>
-            <version>4.0</version>
+            <groupId>com.sedmelluq</groupId>
+            <artifactId>lavaplayer</artifactId>
+            <version>1.3.63</version>
         </dependency>
         <dependency>
             <groupId>com.sedmelluq</groupId>
